# spark-plug-anomaly-detection-tools

./: LICENSE  README.md  pyproject.toml
examples/: run_utils_demo.py
src/spark_plug_utils/: __init__.py  anomaly_definitions.py  image_utils.py
tests/: test_image_utils.py
