[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spark_plug_utils" # The distribution name of your package
version = "0.0.1" # Initial version
description = "Utility functions for spark plug anomaly detection ML project."
readme = "README.md"
requires-python = ">=3.8" # Specify compatible Python versions
license = { file = "LICENSE" }
authors = [
    { name = "jbain01", email = "joshua.l.bain@gmail.com" }
]
# classifiers = [ # Optional: For PyPI, helps categorize your project
#    "Development Status :: 3 - Alpha",
#    "Intended Audience :: Developers",
#    "License :: OSI Approved :: MIT License",
#    "Programming Language :: Python :: 3",
#    "Programming Language :: Python :: 3.8",
#    "Programming Language :: Python :: 3.9",
#    "Programming Language :: Python :: 3.10",
#    "Programming Language :: Python :: 3.11",
#    "Topic :: Scientific/Engineering :: Image Recognition",
# ]

# Potential future dependencies (can be added as needed):
# dependencies = [
#     "numpy",
#     "Pillow", # For image manipulation
#     # "scikit-learn",
#     # "tensorflow",
#     # "torch",
# ]

[project.urls] # Optional: Links related to your project
"Homepage" = "https://github.com/joshbain01/spark-plug-anomaly-detection-tools" # <<< CONFIRM YOUR USERNAME IS CORRECT (joshbain01)
# "Bug Tracker" = "https://github.com/joshbain01/spark-plug-anomaly-detection-tools/issues"

[tool.setuptools.packages.find]
where = ["src"]  # Tells setuptools to look for packages in the 'src' directory